--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "0.19.2",
     "cookie-parser": "1.3.2",
     "cors": "^2.8.4",
     "express": "~4.16.0",
@@ -13,10 +14,13 @@
     "querystring": "~0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "4.0.5",
     "request": "~2.83.0",
     "sass": "^1.32.6",
+    "spotify-web-api-js": "^1.5.1",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.0.1"
   },
