--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_CLIENT_ID=1dbf01a9f70341688dcf42e639382c7c
 REACT_APP_AUTHORIZE_URL=https://accounts.spotify.com/authorize
-REACT_APP_REDIRECT_URL=http://localhost:3000/
+REACT_APP_REDIRECT_URL=https://yube-project.netlify.app/
