--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "yube-project",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -10,6 +11,7 @@
     "cookie-parser": "1.3.2",
     "cors": "^2.8.4",
     "express": "~4.16.0",
+    "gh-pages": "^3.1.0",
     "polished": "^4.1.0",
     "querystring": "~0.2.0",
     "react": "^17.0.2",
@@ -29,7 +31,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
     "extends": [
